Avoid attribute linebreak on wp split view; flex schema adapted

--- a/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
+++ b/app/assets/stylesheets/content/work_packages/single_view/_single_view.sass
@@ -186,20 +186,6 @@ i
     padding: 0
     margin: 0
 
-// Increase label width
-.action-show .attributes-group,
-.full-create .attributes-group
-  // We have to find a middle way between
-  // (a) avoiding label wrap and
-  // (b) ugly content wrap (e.g. in the label)
-  // These values are what matches best at the moment. So be careful when changing them.
-  .attributes-key-value--key
-    flex: 0 0 45%
-    max-width: 45%
-  .attributes-key-value--value-container
-    flex: 0 0 55%
-    max-width: 55%
-
 // Implement two column layout for WP full screen view
 @media screen and (min-width: 92rem), print
   .action-show .-can-have-columns,
